# robo-mation

./: .gitignore  LICENSE  README.md
AiAndDataProjects/: README.md
AiAndDataProjects/AI_DL_assignments/: car_price_pred.ipynb  gensim.ipynb
AiAndDataProjects/ai_dl_assignments/: Kaggle_Data_Split_Assignment.ipynb  car_price_prediction_neural_network.ipynb
AiAndDataProjects/lung_cancer_classification/Results/: 1.jfif
CPP/arduino_codes_and_libs/: 3_lidar.rar  code ventalotor.txt
CPP/arduino_codes_and_libs/1W_comms_rcv/: 1W_comms_rcv.ino
CPP/arduino_codes_and_libs/1W_comms_trans/: 1W_comms_trans.ino
CPP/arduino_codes_and_libs/3_lidar/: 3_lidar.ino
CPP/arduino_codes_and_libs/ACCIDENT_MESSAGE/: ACCIDENT_MESSAGE.ino
CPP/arduino_codes_and_libs/BT_reciever/: BT_reciever.ino
CPP/arduino_codes_and_libs/BT_transmitter/: BT_transmitter.ino
CPP/arduino_codes_and_libs/IOT_IOT_TEST_CODE2/: IOT_IOT_TEST_CODE2.ino
CPP/arduino_codes_and_libs/Load_Cell_Weight_Measurement/: Load_Cell_Weight_Measurement.ino
CPP/arduino_codes_and_libs/RFID_CHARGER_2/: RFID_CHARGER_2.ino
CPP/arduino_codes_and_libs/SMART_HELMET_KEYPAD/: SMART_HELMET_KEYPAD.ino
CPP/arduino_codes_and_libs/WavSW_ino/: smart_gloves.ino
CPP/arduino_codes_and_libs/accident_alert/: accident_alert.ino
CPP/arduino_codes_and_libs/automatic_irrigation/: automatic_irrigation.ino
CPP/arduino_codes_and_libs/bluetooth_config/: bluetooth_config.ino
CPP/arduino_codes_and_libs/final_3/: final_3.ino
Python/: README.md
Python/AI_DL_assignments/: PCA_SVM_on_Automobile_Dataset.ipynb  Polynomial_regression.ipynb  Titanic_Survival.ipynb  car_price_pred_KNN.ipynb  hugging_face.ipynb
ROS2/: WSL_Installation_Guide.md  readme.md
ROS2/src/dual_arm_simulation/: CMakeLists.txt  setup.cfg  setup.py
ROS2/src/dual_arm_simulation/dual_arm_simulation/: dual_arm_sim_node.py
ROS2/src/dual_arm_simulation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/src/dual_arm_simulation/install/dual_arm_simulation/lib/dual_arm_simulation/: dual_arm_sim_node
ROS2/src/dual_arm_simulation/install/dual_arm_simulation/share/dual_arm_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2/src/dual_arm_simulation/launch/: dual_arm_teleop.launch.py
ROS2/src/dual_arm_simulation/mujoco_menagerie/franka_emika_panda/: dual_arm_scene.xml  panda_left.xml  panda_right.xml
RoboticsAndAutomationProjects/: README.md
zephyrproject/: COMMANDS.txt
(+84 files in other folders)
