<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_arm_simulation</name>
  <version>0.1.0</version>
  <description>MuJoCo dual Franka Panda simulation node and scene assets. Provides the passive viewer sim node and exposes the scene XML via ament_index so other packages can locate it without hardcoded paths.</description>
  <maintainer email="st199995@stud.uni-stuttgart.de">root</maintainer>
  <license>TODO: License declaration</license>
  <!--  Build  -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--  Runtime Python deps  -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-mujoco</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
